<resources>
    <string name="toast_wallet_reset">Your wallet was reset! It will take some time to recover.</string>
    <string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
    <string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u&gt;back up your wallet&lt;/u&gt;!</string>
    <string name="blockchain_state_progress_hours">%1$s, %2$d hours behind [%3$d]</string>
    <string name="blockchain_state_progress_days">%1$s, %2$d days behind [%3$d]</string>
    <string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind [%3$d]</string>
    <string name="blockchain_state_progress_months">%1$s, %2$d months behind [%3$d]</string>
    <string name="blockchain_state_progress_downloading">Synchronizing with network</string>
    <string name="blockchain_state_progress_stalled">Synchronization stalled</string>
    <string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
    <string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
    <string name="wallet_address_fragment_clipboard_msg">Sexcoin address copied to clipboard</string>
    <string name="wallet_address_dialog_fragment_hint">To protect your privacy, your address will change once it receives a payment.</string>
    <string name="wallet_balance_fragment_insecure_device">Your device is old and insecure. Please only use for small amounts.</string>
    <string name="wallet_balance_fragment_too_much">This amount is quite high for carrying in your pocket. Please move some to a safer place.</string>
    <string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
    <string name="exchange_rates_activity_title">Exchange rates</string>
    <string name="exchange_rates_fragment_empty_text">Could not load exchange rates.</string>
    <string name="exchange_rates_fragment_empty_search">Could not find exchange rate.</string>
    <string name="exchange_rates_fragment_default">(default)</string>
    <string name="exchange_rates_fragment_rate">rate</string>
    <string name="exchange_rates_fragment_balance">balance</string>
    <string name="exchange_rates_fragment_source">Price from %s</string>
    <string name="exchange_rates_options_search">Search exchange rate</string>
    <string name="wallet_transactions_fragment_empty_text_received">No Sexcoins received so far.</string>
    <string name="wallet_transactions_fragment_empty_text_sent">No Sexcoins sent so far.</string>
    <string name="wallet_transactions_fragment_empty_text_howto">How to get Sexcoins?\n\nTrade for traditional money,\nsell goods or services or\nearn by working.</string>
    <string name="wallet_transactions_fragment_empty_text_warning">Do not use this wallet for many transactions with lots of small outputs like for example mining pool or faucet payouts. These can slow down the wallet to a halt and make your coins inaccessible!</string>
    <string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u&gt;backed up your wallet&lt;/u&gt;, to protect against loss?</string>
    <string name="wallet_transactions_row_warning_storage_encryption">Hint: to increase the safety of your wallet, you can &lt;u&gt;encrypt your device&lt;/u&gt;. This also protects data of other apps.</string>
    <string name="wallet_transactions_row_warning_chain_forking">The Sexcoin network is undergoing maintenance. You\'re advised to not send or receive any coins until maintenance is finished. &lt;u&gt;More information.&lt;/u&gt;</string>
    <string name="wallet_transactions_fragment_coinbase">mined</string>
    <string name="wallet_transactions_fragment_internal">internal</string>
    <string name="wallet_transactions_options_filter">Filter</string>
    <string name="wallet_transactions_options_filter_all">All payments</string>
    <string name="wallet_transactions_options_filter_received">Received payments</string>
    <string name="wallet_transactions_options_filter_sent">Sent payments</string>
    <string name="wallet_options_safety_menu">Safety</string>
    <string name="wallet_options_encrypt_keys_set">Set spending PIN</string>
    <string name="wallet_options_encrypt_keys_change">Change spending PIN</string>
    <string name="wallet_options_safety">Safety notes</string>
    <string name="wallet_options_technical_notes_title">Technical notes</string>
    <string name="wallet_options_donate">Tip / donate</string>
    <string name="wallet_options_disconnect">Disconnect</string>
    <string name="wallet_donate_address_label">Donation for Sexcoin Wallet</string>
    <string name="alert_dialogs_fragment_insecure_bluetooth_title">Security alert</string>
    <string name="alert_dialogs_fragment_insecure_bluetooth_message">Your device\'s Bluetooth component is vulnerable. Your Sexcoins on this device are at risk, regardless of the app you\'re using to store them!\n\nWe suggest to switch off Bluetooth immediately and check with your device manufacturer for an Android OS update that implements security patch level \'%s\' or later.</string>
    <string name="wallet_low_storage_dialog_title">Internal device storage space low!</string>
    <string name="wallet_low_storage_dialog_msg">Sexcoin Wallet uses internal storage for remembering transactions and
        blocks. If it runs out of space, it will stop working and your Sexcoins will be at risk! Do you want to open the
        Application Manager to uninstall unneeded apps?
    </string>
    <string name="wallet_low_storage_dialog_button_apps">Manage apps</string>
    <string name="wallet_timeskew_dialog_title">Check date &amp; time settings</string>
    <string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Sexcoins due to this problem.\n\nYou should check and if necessary correct your date, time and timezone settings.</string>
    <string name="wallet_version_dialog_title">A new version is available!</string>
    <string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
    <string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
    <string name="wallet_version_dialog_button_market">Google Play</string>
    <string name="wallet_version_dialog_button_binary">Download</string>
    <string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
    <string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of Sexcoin Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
    <string name="alert_dialogs_fragment_settings_failed_title">Problem with opening of settings</string>
    <string name="send_coins_activity_title">Send Sexcoins</string>
    <string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s…</string>
    <string name="send_coins_fragment_request_payment_request_failed_title">Fetching signature failed</string>
    <string name="send_coins_fragment_request_payment_request_wrong_signature">Wrong signature!</string>
    <string name="send_coins_fragment_payee_verified_by">verified by: %s</string>
    <string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
    <string name="send_coins_fragment_receiving_address_label">Pay to</string>
    <string name="send_coins_fragment_receiving_address_hint">type address or name</string>
    <string name="send_coins_fragment_receiving_address_error">Invalid Sexcoin address!</string>
    <string name="send_coins_fragment_receiving_address_own">You\'re about to send to yourself!</string>
    <string name="send_coins_fragment_receiving_address_complex">complex\naddress</string>
    <string name="send_coins_fragment_pending">(%s waiting for confirmation)</string>
    <string name="send_coins_fragment_amount_label">Amount to pay</string>
    <string name="send_coins_fragment_hint_fee_economic">An economic fee of %s will be paid. Important: Use \'economic\' only if you don\'t care about confirmation time.</string>
    <string name="send_coins_fragment_hint_fee">A network fee of %s will be paid.</string>
    <string name="send_coins_fragment_hint_fee_priority">A priority fee of %s will be paid. If you care about low fees, use \'priority\' only if you need confirmation as soon as possible.</string>
    <string name="send_coins_fragment_hint_dusty_send">The amount is too small to send.</string>
    <string name="send_coins_fragment_hint_insufficient_money">Not enough available coins. You\'re missing %s. This may also be due to the network fee.</string>
    <string name="send_coins_fragment_hint_empty_wallet_failed">The amount of tiny payments in your wallet doesn\'t add up to a sendable value.</string>
    <string name="send_coins_fragment_hint_replaying">Currently payments are not possible because a replay is in progress.</string>
    <string name="send_coins_fragment_direct_payment_enable">Send payment directly to the payee.</string>
    <string name="send_coins_fragment_direct_payment_ack">Your payment was successfully sent directly.</string>
    <string name="send_coins_fragment_direct_payment_nack">Your payment was rejected via direct connection.</string>
    <string name="send_coins_fragment_direct_payment_failed_title">Direct payment failed</string>
    <string name="send_coins_fragment_direct_payment_failed_msg">Your payment will still be broadcasted via the P2P network.</string>
    <string name="send_coins_fragment_button_send">Send</string>
    <string name="send_coins_fragment_button_back">Back</string>
    <string name="send_coins_fragment_significant_fee_title">Significant network fee</string>
    <string name="send_coins_fragment_significant_fee_message">The network fee for this payment (%1$s) is high in relation to the amount (%2$s). Do you want to send anyway?</string>
    <string name="send_coins_fragment_insufficient_money_title">Not enough available coins</string>
    <string name="send_coins_fragment_insufficient_money_msg1">You\'re missing %s.</string>
    <string name="send_coins_fragment_insufficient_money_msg2">Do you want to pay with all you have?</string>
    <string name="send_coins_fragment_empty_wallet_failed_title">Emptying of wallet failed</string>
    <string name="send_coins_fragment_state_decrypting">Decrypting…</string>
    <string name="send_coins_preparation_msg">Signing…</string>
    <string name="send_coins_sending_msg">Sending…</string>
    <string name="send_coins_sent_msg">Sent!</string>
    <string name="send_coins_failed_msg">Failed!</string>
    <string name="send_coins_error_msg">Problem sending coins!</string>
    <string name="send_coins_options_fee_category">Fee</string>
    <string name="report_issue_dialog_description">issue description</string>
    <string name="report_issue_dialog_collect_device_info">Append device information</string>
    <string name="report_issue_dialog_collect_installed_packages">Append list of installed packages</string>
    <string name="report_issue_dialog_collect_application_log">Append application log</string>
    <string name="report_issue_dialog_collect_wallet_dump">Append wallet dump</string>
    <string name="about_title">About</string>
    <string name="about_license_title">License</string>
    <string name="about_credits_zxing_title">ZXing, a QR-code processing library</string>
    <string name="report_issue_dialog_save_to_downloads">Save a copy to Download Folder</string>
    <string name="report_issue_dialog_send_via_email">Deliver Report via Email</string>
    <string name="report_issue_dialog_delivery_options_title">Delivery Options</string>
</resources>